# Rask-Webserver

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  memoria.md  readme.md
files/: rask.conf  rask.service  server.conf
include/: config_parser.h  connection_handler.h  request.h  response.h  thread_pool.h
includes/: config_parser.h  connection_handler.h  request.h  response.h  thread_pool.h  utils.h
lib/: sockets.h
lib/daemon/: daemon.c  daemon.h
lib/logging/: logging.c  logging.h
lib/sockets/: sockets.c  sockets.h
lib/thread_pool/: thread_pool.c  thread_pool.h
src/: config_parser.c  connection_handler.c  iterative_server.c  request.c  response.c  server.c  thread_pool.c
srclib/: sockets.c
srclib/DynamicBuffer/: dynamic_buffer.c  dynamic_buffer.h
srclib/daemon/: daemon.h
srclib/dynamic_buffer/: dynamic_buffer.c  dynamic_buffer.h
srclib/execute_scripts/: execute_scripts.c  execute_scripts.h
srclib/logging/: logging.c  logging.h
srclib/socket/: socket.c  socket.h
srclib/sockets/: sockets.c  sockets.h
srclib/string/: string.c  string.h
srclib/url_encoded_form_parser/: url_encoded_form_parser.c  url_encoded_form_parser.h
tests/: client.py  post.py
www/: index.html
www/scripts/: celsius_to_fahrenheit.py  greet_user.py  test.php  test.py
